// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`fixture scan pipeline > golden ranking order is stable for weight diffs > golden-ranking 1`] = `
[
  {
    "brandTier": 3,
    "name": "Four Seasons Hotel Buenos Aires",
    "plant": 0,
    "score": 50.59,
  },
  {
    "brandTier": 3,
    "name": "Palacio Duhau - Park Hyatt Buenos Aires",
    "plant": 0,
    "score": 49.41,
  },
  {
    "brandTier": 0,
    "name": "Palladio Hotel Buenos Aires - MGallery",
    "plant": 0,
    "score": 43.5,
  },
  {
    "brandTier": 0,
    "name": "Casa Caravan",
    "plant": 0,
    "score": 42.91,
  },
  {
    "brandTier": 0,
    "name": "Sucre Suites",
    "plant": 0,
    "score": 42.17,
  },
  {
    "brandTier": 0,
    "name": "MONROE SUITES",
    "plant": 0,
    "score": 41.94,
  },
  {
    "brandTier": 2,
    "name": "Hilton Buenos Aires",
    "plant": 0,
    "score": 41.34,
  },
  {
    "brandTier": 0,
    "name": "El Misti Coliving Obelisco",
    "plant": 0,
    "score": 41.24,
  },
  {
    "brandTier": 0,
    "name": "Alvear Palace Hotel",
    "plant": 0,
    "score": 38.42,
  },
  {
    "brandTier": 0,
    "name": "EL FARO APART MONUMENTAL",
    "plant": 0,
    "score": 38.38,
  },
]
`;

exports[`fixture scan pipeline > scores BA fixtures end-to-end with zero live calls > fixture-top10 1`] = `
[
  {
    "brandTier": 3,
    "facts": {
      "hasAC": "confirmed",
      "hasElevator": "unknown",
      "hasWifi": "confirmed",
    },
    "gatedOut": false,
    "gates": [],
    "hotelClass": 5,
    "lowStarShare": 0.025817939016247494,
    "name": "Four Seasons Hotel Buenos Aires",
    "plantPenalty": 0,
    "rating": 4.7,
    "reviews": 8986,
    "score": 50.59,
    "token": "ChcI76_jv96q05GvARoKL20vMDJxNDUyNRAB",
    "worstCategory": null,
    "worstCategoryNeg": null,
  },
  {
    "brandTier": 3,
    "facts": {
      "hasAC": "confirmed",
      "hasElevator": "unknown",
      "hasWifi": "confirmed",
    },
    "gatedOut": false,
    "gates": [],
    "hotelClass": 5,
    "lowStarShare": 0.03514299563742123,
    "name": "Palacio Duhau - Park Hyatt Buenos Aires",
    "plantPenalty": 0,
    "rating": 4.7,
    "reviews": 8252,
    "score": 49.41,
    "token": "ChYI8v6gjYvdg8ErGgovbS8wNjRxZ2NtEAE",
    "worstCategory": null,
    "worstCategoryNeg": null,
  },
  {
    "brandTier": 0,
    "facts": {
      "hasAC": "confirmed",
      "hasElevator": "unknown",
      "hasWifi": "confirmed",
    },
    "gatedOut": false,
    "gates": [],
    "hotelClass": 5,
    "lowStarShare": 0.019422074846044527,
    "name": "Palladio Hotel Buenos Aires - MGallery",
    "plantPenalty": 0,
    "rating": 4.8,
    "reviews": 2111,
    "score": 43.5,
    "token": "ChoIpJSvp8Sl76C0ARoNL2cvMTFncjZfX252ORAB",
    "worstCategory": null,
    "worstCategoryNeg": null,
  },
  {
    "brandTier": 0,
    "facts": {
      "hasAC": "confirmed",
      "hasElevator": "unknown",
      "hasWifi": "confirmed",
    },
    "gatedOut": false,
    "gates": [],
    "hotelClass": null,
    "lowStarShare": 0,
    "name": "Casa Caravan",
    "plantPenalty": 0,
    "rating": 4.9,
    "reviews": 297,
    "score": 42.91,
    "token": "ChoIsMHtjIqHxvidARoNL2cvMTFidzR2bHQxMhAB",
    "worstCategory": null,
    "worstCategoryNeg": null,
  },
  {
    "brandTier": 0,
    "facts": {
      "hasAC": "confirmed",
      "hasElevator": "unknown",
      "hasWifi": "confirmed",
    },
    "gatedOut": false,
    "gates": [],
    "hotelClass": null,
    "lowStarShare": 0.011983223487118035,
    "name": "Sucre Suites",
    "plantPenalty": 0,
    "rating": 4.8,
    "reviews": 1669,
    "score": 42.17,
    "token": "ChkIqOeO_NGMs4liGg0vZy8xMWc2bWYwOHFrEAE",
    "worstCategory": "Sleep",
    "worstCategoryNeg": 0.3333333333333333,
  },
  {
    "brandTier": 0,
    "facts": {
      "hasAC": "confirmed",
      "hasElevator": "unknown",
      "hasWifi": "confirmed",
    },
    "gatedOut": false,
    "gates": [],
    "hotelClass": null,
    "lowStarShare": 0.003816793893129771,
    "name": "MONROE SUITES",
    "plantPenalty": 0,
    "rating": 4.8,
    "reviews": 786,
    "score": 41.94,
    "token": "ChoIwrSq5a6e3NuqARoNL2cvMTFzcmJyMDcwZxAB",
    "worstCategory": "Cleanliness",
    "worstCategoryNeg": 0,
  },
  {
    "brandTier": 2,
    "facts": {
      "hasAC": "confirmed",
      "hasElevator": "unknown",
      "hasWifi": "confirmed",
    },
    "gatedOut": false,
    "gates": [],
    "hotelClass": 5,
    "lowStarShare": 0.02893551786911948,
    "name": "Hilton Buenos Aires",
    "plantPenalty": 0,
    "rating": 4.6,
    "reviews": 20874,
    "score": 41.34,
    "token": "ChYI1PSdirWY8qI5GgovbS8wNjRtYjBnEAE",
    "worstCategory": null,
    "worstCategoryNeg": null,
  },
  {
    "brandTier": 0,
    "facts": {
      "hasAC": "confirmed",
      "hasElevator": "unknown",
      "hasWifi": "confirmed",
    },
    "gatedOut": false,
    "gates": [],
    "hotelClass": 3,
    "lowStarShare": 0.020089285714285716,
    "name": "El Misti Coliving Obelisco",
    "plantPenalty": 0,
    "rating": 4.8,
    "reviews": 1792,
    "score": 41.24,
    "token": "ChkIzq7SiOnu0cI_Gg0vZy8xMWtodGhoanQzEAE",
    "worstCategory": null,
    "worstCategoryNeg": null,
  },
  {
    "brandTier": 0,
    "facts": {
      "hasAC": "confirmed",
      "hasElevator": "unknown",
      "hasWifi": "confirmed",
    },
    "gatedOut": false,
    "gates": [],
    "hotelClass": 5,
    "lowStarShare": 0.027056539674836205,
    "name": "Alvear Palace Hotel",
    "plantPenalty": 0,
    "rating": 4.7,
    "reviews": 8242,
    "score": 38.42,
    "token": "ChcIgYLT9pLF3--cARoKL20vMDRuNmRtcxAB",
    "worstCategory": null,
    "worstCategoryNeg": null,
  },
  {
    "brandTier": 0,
    "facts": {
      "hasAC": "confirmed",
      "hasElevator": "unknown",
      "hasWifi": "confirmed",
    },
    "gatedOut": false,
    "gates": [],
    "hotelClass": null,
    "lowStarShare": 0.017587939698492462,
    "name": "EL FARO APART MONUMENTAL",
    "plantPenalty": 0,
    "rating": 4.8,
    "reviews": 398,
    "score": 38.38,
    "token": "ChoIxeXBlNel59akARoNL2cvMTFmbnhidnIyaxAB",
    "worstCategory": "Cleanliness",
    "worstCategoryNeg": 0,
  },
]
`;
